2008-11-21  Claudio Saavedra  <csaavedra@igalia.com>

	* === Release 3.1.1 ===

2008-11-07  Sven Herzberg  <sven@imendio.com>

	Fix struct field indentation

	* engine/sapwood-rc-style.h: properly align the stuff

2008-11-07  Sven Herzberg  <sven@imendio.com>

	NB#91010: shadowcolor option for labels
	Patch by Daniel Borgmann (danielb@openismus.com)

	* engine/sapwood-rc-style.c (theme_parse_shadowcolor),
	(sapwood_rc_style_parse), (sapwood_rc_style_merge):
	* engine/sapwood-rc-style.h:
	* engine/sapwood-style.c (draw_layout):
	* engine/theme-pixbuf.h:

2008-10-06  Claudio Saavedra  <csaavedra@igalia.com>

	* === Release 3.1.0 ===

2008-10-02  Daniel Borgmann  <danielb@openismus.com>

	* engine/sapwood-style.c: (draw_shadow), (draw_flat_box): Removed
	hack from draw_shadow, added focus state detection to
	draw_flat_box for entries.

2008-10-02  Daniel Borgmann  <danielb@openismus.com>

       * engine/sapwood-style.c: Hacks to enable themeing of 
       insensitive state for GtkEntry widgets.

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Renamed the function to match file and library name

	* engine/sapwood-client.c,
	* engine/sapwood-client.h: renamed the function to
	sapwood_client_get_socket()
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: updated

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved pixbuf_proto_get_socket() into the shared library

	* engine/sapwood-client.c,
	* engine/sapwood-client.h: new location for this function
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: use the shared function, not two completely
	identical but separate ones

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Renamed the enumeration value to match the file and library name

	* engine/sapwood-client.h,
	* engine/sapwood-pixmap.c,
	* tests/double-free.c: renamed the enumeration

2008-09-29  Sven Herzberg  <sven@imendio.com>

	Moved the error enumeration into the shared header

	* engine/sapwood-client.h,
	* engine/sapwood-pixmap.h: moved the enumeration